Fix broken style for past connect sessions in faculty profile

--- a/app/assets/stylesheets/faculty/show.scss
+++ b/app/assets/stylesheets/faculty/show.scss
@@ -285,6 +285,9 @@
             max-height: none;
           }
         }
+        .past-connect-questions {
+          white-space: pre-wrap;
+        }
       }
     }
     @media (max-width: $screen-sm-max) {
